--- a/Gregames/OregonTrail/Segment-Shop.html
+++ b/Gregames/OregonTrail/Segment-Shop.html
@@ -11,62 +11,62 @@
 <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Month"><button>8</button></a> Leave_Store
 <p id="$" style="color:white"></p>
 <script>
-var money = sessionStorage.getItem("money");
+var money = localStorage.getItem("money");
 function buyOx() {
   var Oxen = docment.getElementById("box").value;
-  sessionStorage.setItem("Oxen", Oxen + sessionStorage.getItem("Oxen"));
+  localStorage.setItem("Oxen", Oxen + localStorage.getItem("Oxen"));
   var oxPrice = Oxen * 20;
   money -= oxPrice;
   document.getElementById("$").innerHTML = "money_left" + money;
-  sessionStorage.setItem("money", money);
+  localStorage.setItem("money", money);
 }
 function buyFood() {
   var Foodlb = document.getElementById("box").value;
-  sessionStorage.setItem("Foodlb", Foodlb + sessionStorage.getItem("Foodlb"));
+  localStorage.setItem("Foodlb", Foodlb + localStorage.getItem("Foodlb"));
   var foodPrice = Foodlb * 0.2;
   money -= foodPrice;
   document.getElementById("$").innerHTML = "money_left" + money;
-  sessionStorage.setItem("money", money);
+  localStorage.setItem("money", money);
 }
 function buyClothing() {
   var Clothing = document.getElementById("box").value;
-  sessionStorage.setItem("Clothing", Clothing + sessionStorage.getItem("Clothing"));
+  localStorage.setItem("Clothing", Clothing + localStorage.getItem("Clothing"));
   var clothingPrice = Clothing * 10;
   money -= clothingPrice;
   document.getElementById("$").innerHTML = "money_left" + money;
-  sessionStorage.setItem("money", money);
+  localStorage.setItem("money", money);
 }
 function buyAmo() {
   var Ammo = document.getElementById("box").value * 20;
-  sessionStorage.setItem("Ammo", Ammo + sessionStorage.getItem("Ammo"));
+  localStorage.setItem("Ammo", Ammo + localStorage.getItem("Ammo"));
   var ammoPrice = Ammo * 0.1;
   money -= ammoPrice;
   document.getElementById("$").innerHTML = "money_left" + money;
-  sessionStorage.setItem("money", money);
+  localStorage.setItem("money", money);
 }
 function buyAxel() {
   var Axels = document.getElementById("box").value;
-  sessionStorage.setItem("Axels", Axels + sessionStorage.getItem("Axels"));
+  localStorage.setItem("Axels", Axels + localStorage.getItem("Axels"));
   var axelPrice = Axels * 10;
   money -= axelPrice;
   document.getElementById("$").innerHTML = "money_left" + money;
-  sessionStorage.setItem("money", money);
+  localStorage.setItem("money", money);
 }
 function buyToungue() {
   var Toungues = document.getElementById("box").value;
-  sessionStorage.setItem("Toungues", Toungues + sessionStorage.getItem("Toungues"));
+  localStorage.setItem("Toungues", Toungues + localStorage.getItem("Toungues"));
   var tounguePrice = Toungs * 10;
   money -= tounguePrice;
   document.getElementById("$").innerHTML = "money_left" + money;
-  sessionStorage.setItem("money", money);
+  localStorage.setItem("money", money);
 }
 function buyWheel() {
   var Wheels = document.getElementById("box").value;
-  sessionStorage.setItem("Wheels", Wheels + sessionStorage.getItem("Wheels"))
+  localStorage.setItem("Wheels", Wheels + localStorage.getItem("Wheels"))
   var wheelPrice = Wheels * 10
   money -= wheelPrice
   document.getElementById("$").innerHTML = "money_left" + money;
-  sessionStorage.setItem("money", money)
+  localStorage.setItem("money", money)
 }
 </script></body2></body1></html><script>
   document.body.style.background = "black";
