--- a/Gregames/OregonTrail/Segment-Action-Menu.html
+++ b/Gregames/OregonTrail/Segment-Action-Menu.html
@@ -194,7 +194,7 @@ function Run() {
                       if (Wsick) {
                         if (Wdied) {
                           if (Isick) {
-                            alert(All_Of_The_People_In_Your_Party_Have_Died);
+                            alert("All_Of_The_People_In_Your_Party_Have_Died");
                             localStorage.clear();
                             window.location.assign("https://0038509gd.github.io/Greg.com/Gregames");
                           } else {
@@ -287,7 +287,7 @@ function Run() {
                       if (Wsick) {
                         if (Wdied) {
                           if (Isick) {
-                            alert(All_Of_The_People_In_Your_Party_Have_Died);
+                            alert("All_Of_The_People_In_Your_Party_Have_Died");
                             localStorage.clear();
                             window.location.assign("https://0038509gd.github.io/Greg.com/Gregames");
                           } else {
