--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -414,7 +414,9 @@ function Day() {
                       if (Wsick) {
                         if (Wdied) {
                           if (Isick) {
-                            window.location.assing("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/YourDead");
+                            alert("All_Of_The_People_In_Your_Party_Have_Died");
+                            localStorage.clear();
+                            window.location.assign("https://0038509gd.github.io/Greg.com/Gregames");
                           } else {
                             var Randomizer = randint(1, );
                             if (Randomizer = 1) {
@@ -505,7 +507,9 @@ function Day() {
                       if (Wsick) {
                         if (Wdied) {
                           if (Isick) {
-                            window.location.assing("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/YourDead");
+                            alert("All_Of_The_People_In_Your_Party_Have_Died");
+                            localStorage.clear();
+                            window.location.assign("https://0038509gd.github.io/Greg.com/Gregames");
                           } else {
                             var Randomizer = randint(1, );
                             if (Randomizer = 1) {
