--- a/Greg-Chat/index.html
+++ b/Greg-Chat/index.html
@@ -5,20 +5,28 @@
 <p id="history"></p>
 <script>
 function setup() {
-  var Banned = localStorage.getItem("banned");;
+  var Banned = localStorage.getItem("banned");
   localStorage.removeItem("banned");
-  var name = localStorage.getItem("name");;
+  var name = localStorage.getItem("name");
   localStorage.removeItem("name");
   document.getElementById('name').innerHTML = name;
   name += "_said-";
+  while (true) {
+    var U = localStorage.getItem("update");
+    if (U) {
+      var H = localStorage.getItem("history");
+      document.getElementById('history').innerHTML = H;
+    }
+  }
 }
 function send() {
   if (Banned) {
     alert("You_Have_Ben_Banned!-You_May_Not_Post_Messages!");
   } else {
-    H += name + document.getElementById('message').value; + "<br>";
+    var M = document.getElementById('message').value;
+    H += name + M + "<br>";
     localStorage.setItem("history", H);
-    document.getElementById('history').innerHTML = H;
+    document.getElementById('history').innerHTML = name + M + "<br>"
     localStorage.setItem("update", true);
     pause(500)
     localStorage.setItem("update", false);
